<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/editSemesterText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="63dp"
        android:text="@string/semester"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/editGradeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editSemesterValue"
        android:layout_marginTop="76dp"
        android:text="@string/grade"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/editModuleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editGradeValue"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="14dp"
        android:text="@string/module"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/editSemesterValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editSemesterText"
        android:layout_alignBottom="@+id/editSemesterText"
        android:layout_alignLeft="@+id/editModuleCodeValue"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="text" >
         <requestFocus />
      </EditText>
    <EditText
        android:id="@+id/editGradeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editGradeText"
        android:layout_alignLeft="@+id/editModuleCodeValue"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="text" >

       
    </EditText>

    <EditText
        android:id="@+id/editModuleCodeValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editModuleText"
        android:layout_alignBottom="@+id/editModuleText"
        android:layout_alignParentRight="true"
        android:ems="10"
         android:inputType="text" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editGradeText"
        android:layout_marginTop="44dp"
        android:text="@string/submit" 
        android:onClick="submit"/>

    <Button
        android:id="@+id/editBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editButton"
        android:layout_marginTop="20dp"
        android:onClick="back"
        android:text="@string/back" />

</RelativeLayout>